--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
 PORT=3030
 
-REACT_APP_HOST_API_KEY="https//production-url/api"
+REACT_APP_HOST_API_KEY="https://teach-me-academy.onrender.com/api/v1"
