--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@hookform/resolvers": "^2.8.5",
+    "@iconify/react": "^3.1.0",
     "@mui/lab": "^5.0.0-alpha.60",
     "@mui/material": "^5.2.4",
     "@reduxjs/toolkit": "^1.7.1",
     "axios": "^0.24.0",
+    "framer-motion": "^4.1.17",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "notistack": "^2.0.3",
@@ -17,15 +20,16 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.2.2",
+    "react-intersection-observer": "^8.33.1",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.2.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^4.0.3",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "simplebar-react": "^2.3.6",
     "web-vitals": "^2.1.0",
-    "@hookform/resolvers": "^2.8.5",
-    "@iconify/react": "^3.1.0",
     "yup": "^0.32.11"
   },
   "scripts": {
